--- a/.github/workflows/swift-build.yml
+++ b/.github/workflows/swift-build.yml
@@ -14,11 +14,20 @@ on:
       - '**/*.swift'
       - '.github/workflows/*.yml'
 jobs:
+  swiftLint:
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run swiftlint
+        run: swiftlint lint --reporter github-actions-logging
+
   test:
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v2
+      - name: Resolve
+        run: swift package resolve
       - name: Build Package
         run: swift build -v
       - name: Run tests
-        run: swift test -v
+        run: set -o pipefail && swift test 2>&1 | xcpretty
