fix(ci): update release of binary;

--- a/.github/workflows/swift-build.yml
+++ b/.github/workflows/swift-build.yml
@@ -14,7 +14,7 @@ on:
       - '**/*.swift'
       - '.github/workflows/*.yml'
 jobs:
-  swiftLint:
+  swift_lint:
     runs-on: macos-latest
     steps:
       - name: Checkout
