feat(ci): add env var SWIFTPM_ENABLE_PLUGINS to make building work;

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: Zip release build
+        env:
+          SWIFTPM_ENABLE_PLUGINS: 1
         run: make archive
       - name: Get release
         id: get_release
