--- a/.github/workflows/swift-build.yml
+++ b/.github/workflows/swift-build.yml
@@ -24,8 +24,21 @@ jobs:
 
   test:
     runs-on: macos-latest
+    name: Xcode ${{ matrix.xcode }}
+    strategy:
+      matrix:
+        xcode: ["14.2"]
     steps:
       - uses: actions/checkout@v2
+      - name: Set Xcode
+        run: |
+          echo "Available Xcode versions:"
+          ls /Applications | grep Xcode
+          echo "Choosing Xcode_${{ matrix.xcode }}.app"
+          sudo xcode-select -s /Applications/Xcode_${{ matrix.xcode }}.app
+          xcodebuild -version
+          swift --version
+          swift package --version
       - name: Resolve
         run: swift package resolve
       - name: Build Package
@@ -33,6 +46,7 @@ jobs:
           SWIFTPM_ENABLE_PLUGINS: 1
         run: swift build -v
       - name: Run tests
+        run: set -o pipefail && swift test 2>&1 | xcpretty
         env:
           SWIFTPM_ENABLE_PLUGINS: 1
-        run: set -o pipefail && swift test 2>&1 | xcpretty
+        
