--- a/.github/workflows/swift-build.yml
+++ b/.github/workflows/swift-build.yml
@@ -3,24 +3,27 @@ name: Swift
 on:
   push:
     branches:
-      - '**'
+      - "**"
     tags-ignore:
-      - '**'
+      - "**"
     paths:
-      - '**/*.swift'
-      - '.github/workflows/*.yml'
+      - "**/*.swift"
+      - ".github/workflows/*.yml"
   pull_request:
     paths:
-      - '**/*.swift'
-      - '.github/workflows/*.yml'
+      - "**/*.swift"
+      - ".github/workflows/*.yml"
 jobs:
   swift_lint:
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Run swiftlint
-        run: swiftlint lint --reporter github-actions-logging
+      - name: Run SwiftLint
+        run: |
+          docker run --rm -v `pwd`:`pwd` -w `pwd` \
+            ghcr.io/realm/swiftlint:0.57.0 \
+            swiftlint lint --strict --config .swiftlint.yml --reporter github-actions-logging
 
   test:
     runs-on: macos-latest
@@ -49,4 +52,3 @@ jobs:
         run: set -o pipefail && swift test 2>&1 | xcpretty
         env:
           SWIFTPM_ENABLE_PLUGINS: 1
-        
