--- a/.github/workflows/swift-build.yml
+++ b/.github/workflows/swift-build.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v5
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
       - name: Run SwiftLint
         run: |
           docker run --rm -v `pwd`:`pwd` -w `pwd` \
@@ -32,7 +32,7 @@ jobs:
       matrix:
         xcode: ["16.2"]
     steps:
-      - uses: actions/checkout@v5
+      - uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
       - name: Set correct Xcode version
         run: |
           echo "Available Xcode versions:"
